# fiap-soat-video-jobs

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  test-and-deploy.yaml
k8s/: README.md
k8s/base/: configmap-app.yaml  deployment-api.yaml  deployment-worker.yaml  kustomization.yaml  scaledobject-worker.yaml  secret-app.yaml  service-api.yaml  triggerauthentication-sqs.yaml
k8s/overlays/local-dev/: kustomization.yaml  patch-configmap-app.yaml  patch-scaledobject-worker.yaml  patch-service-api-nodeport.yaml
src/job_service/: __init__.py
src/job_service/application/use_cases/: __init__.py  create_job.py  get_job.py  list_jobs.py  process_video.py
src/job_service/domain/: __init__.py
src/job_service/domain/entities/: __init__.py  job.py
src/job_service/infrastructure/adapters/: __init__.py
src/job_service/infrastructure/adapters/input/: sqs_consumer.py
src/job_service/infrastructure/config/: __init__.py  settings.py
src/video_processor_shared/: __init__.py
src/video_processor_shared/domain/: __init__.py  events.py  exceptions.py  value_objects.py
tests/: conftest.py
tests/integration/api/: test_api_routes.py
tests/unit/application/: test_create_job_use_case.py  test_get_job_use_case.py  test_list_jobs_use_case.py  test_process_video_use_case.py
tests/unit/domain/: test_job.py
tests/unit/infrastructure/input/: test_sqs_consumer.py
tests/unit/infrastructure/output/: test_event_publisher.py  test_ffmpeg_processor.py  test_redis_client.py  test_s3_storage.py
(+28 files in other folders)
