[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-service"
version = "0.1.0"
description = "Job processing microservice for FIAP SOAT Video Processor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aioboto3>=12.0.0",
    "httpx>=0.26.0",
    "video-processor-shared @ git+https://github.com/SOAT-264/fiap-soat-video-shared.git",
]

[project.optional-dependencies]
worker = [
    "ffmpeg-python>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "moto>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=job_service --cov-report=term-missing --cov-fail-under=85"
